fix(resume): Fix the alignment on `.resume-header__address`.

--- a/packages/resume/styles/resume/header.scss
+++ b/packages/resume/styles/resume/header.scss
@@ -16,7 +16,7 @@
         }
     }
 
-    &__email, &__tel, &__web, &__address {
+    &__email, &__tel, &__web, &__location {
         display: block;
         margin-bottom: 10px;
     }
